-aded Player hud component